--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,4 +1,4 @@
-name: 🍀 Check source code
+name: check source code
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   check:
-    name: Run `./gradlew check`
+    name: run gradle check
     runs-on: ubuntu-latest
 
     permissions:
